--- a/client/s.css
+++ b/client/s.css
@@ -10,7 +10,7 @@ body {
     /*background: rgba(200,200,200,1) !important;*/
      /*filter: invert(1) !important; */
      /*overscroll-behavior: none; */
-    transition: all .5s ease !important;
+    /*transition: all .5s ease !important;*/
     /* background: #0e0e44 !important; */
 }
 
@@ -188,7 +188,7 @@ html.ios body {
 
 .topnav.menu {
     /*border-radius: 0 0 10px 10px !important; */
-    transition: background-color 3s ease !important;
+    /*transition: background-color 3s ease !important;*/
     background-color: rgba(250,250,250,1) !important; 
     /*background-color: rgba(50,110,100,1) !important; */
 
@@ -262,11 +262,11 @@ html.ios body {
 } */
 .menu:not(.topnav) {
      /*border-radius: 10px !important; */
-    transition: background-color .5s ease !important;
+    /*transition: background-color .5s ease !important;*/
 }
 
 .topnav > .item {
-    transition: all .1s ease !important;
+    /*transition: all .1s ease !important;*/
     /* z-index: 2000 !important; */
 }
 .global_container{
@@ -628,7 +628,7 @@ body {
 } 
 
 
-.button, .selector, .card, .dark_mode, .ui.header, .ui.label, .item, p, img{
+.button, .selector, .card, .dark_mode, .ui.header, .ui.label, p, img{
     animation: fadein .5s !important;
     /*-webkit-transition: opacity .1s ease-in !important;*/
     /* -webkit-transition: opacity .1s ease-out; */
